# topic-modelling-attention

./: .gitignore  LICENSE  README.md  experiments-jax.ipynb  experiments-models.ipynb  experiments-torch.ipynb  pyproject.toml  tests.ipynb
.github/workflows/: ci.yml
examples/: batched_training.ipynb  metrics.ipynb  quickstart.ipynb  regularization.ipynb
src/: data_prepocessing.py  install.py
src/cartm/: model.py  prepocessing.py
src/cartm/metrics/: __init__.py  coherence.py  metric_base.py  perplexity.py  phi_sparsity.py  topic_variance.py
src/cartm/regularization/: __init__.py  decorrelation.py  regularization_base.py  sparsity.py
src/tests/: test_metrics.py  test_model.py  test_preprocessing.py  test_regularization.py
